--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,8 @@
     <properties>
         <surefireArgLine></surefireArgLine>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
+        <!-- Because of this issues.apache.org/jira/projects/MASSEMBLY/issues/MASSEMBLY-1031 we need to force the version to 3.6.0 -->
+        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
         <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
