feat: force maven assembly plugin
prevent renovate from upgrading maven plugin
See https://issues.apache.org/jira/projects/MASSEMBLY/issues/MASSEMBLY-1031

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,18 +1,25 @@
 {
-  "extends": ["config:base"],
-  "rebaseWhen": "conflicted",
+  "extends": ["github>gravitee-io/renovate-config"],
   "packageRules": [
     {
-      "matchDatasources": ["orb"],
+      "matchBaseBranches": ["master"],
+      "matchPackagePatterns": [
+        "org.apache.maven.plugins:maven-assembly-plugin"
+      ],
+      "allowedVersions": "<=3.6.0",
       "automerge": true,
       "automergeType": "branch",
-      "semanticCommitType": "ci"
+      "semanticCommitType": "chore"
     },
     {
-      "matchDepTypes": ["build"],
+      "matchBaseBranches": ["22.x"],
+      "matchPackagePatterns": [
+        "org.apache.maven.plugins:maven-assembly-plugin"
+      ],
+      "allowedVersions": "<=3.6.0",
       "automerge": true,
       "automergeType": "branch",
-      "semanticCommitType": "fix"
+      "semanticCommitType": "chore"
     }
   ]
 }
