--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,7 @@
                                     <exclude>src/main/webapp/**</exclude>
                                     <exclude>node_modules/**</exclude>
                                     <exclude>dist/**</exclude>
+                                    <exclude>.docgen/**</exclude>
                                     <exclude>.tmp/**</exclude>
                                     <exclude>.*</exclude>
                                     <exclude>.*/**</exclude>
