--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,7 @@
                                 <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
                                 <excludes>
                                     <exclude>LICENSE.txt</exclude>
+                                    <exclude>NOTICE.txt</exclude>
                                     <exclude>**/README</exclude>
                                     <exclude>src/main/packaging/**</exclude>
                                     <exclude>src/test/resources/**</exclude>
