--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,7 @@
                     <configuration>
                         <publishingServerId>sonatype-nexus-staging</publishingServerId>
                         <autoPublish>true</autoPublish>
+                        <deploymentName>${project.artifactId}:${project.version}</deploymentName>
                     </configuration>
                 </plugin>
                 <plugin>
